# pa10_ros

./: .gitignore  .project  README.md
my_pcl_tutorial/: .cproject  .project  .pydevproject  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
my_pcl_tutorial/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
my_pcl_tutorial/devel/: .catkin  .rosinstall  setup.sh
my_pcl_tutorial/gtest/: CTestTestfile.cmake  Makefile
my_pcl_tutorial/src/: Kdtree.cpp  PassThrough.cpp  Triangulation.cpp  alignment_prerejective.cpp  cylinder_segmentation.cpp  example.cpp  ransac.cpp  voxel_grid.cpp
pa10_controller_interface/: CMakeLists.txt  package.xml
pa10_controller_interface/launch/: pa10_controller_interface.launch
pa10_controller_interface/scripts/: pa10_controller_interface.py  queue_test.py  utils.py
pa10_description/: CMakeLists.txt  model.config~  package.xml
pa10_description/launch/: display.launch  display.launch~
pa10_description/rviz/: urdf.rviz
pa10_description/urdf/: materials.xacro  pa10.gazebo  pa10.xacro
pa10_gazebo/: CMakeLists.txt  package.xml
pa10_gazebo/launch/: pa10.launch
pa10_gazebo/models/: simple cup.stl
pa10_gazebo/worlds/: pa10.world  pa10.world~
pa10_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
pa10_moveit_config/config/: controllers.yaml  (+7 more)
pa10controller/: CMakeLists.txt  package.xml
pg70/: CMakeLists.txt  package.xml
pg70_description/: CMakeLists.txt  package.xml
pg70_description/urdf/: pg70.urdf.xacro
(+65 files in other folders)
